tests/parse-fail/vec_no_ellipsis.fl
pub mod vec_no_ellipsis {
    pub struct VecNoEllipsis {
        pub v : {int 10};
    }
}
